--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -2,21 +2,72 @@
   <div class="col-md-4">
     <div class="card">
       <div class="card-body">
-        <h1>form</h1>
+        <form action="">
+          <div class="form-group mb-3">
+            <input
+              type="text"
+              name=""
+              class="form-control"
+              placeholder="Enter your name"
+            />
+          </div>
+          <div class="form-group mb-3">
+            <input
+              type="text"
+              name=""
+              class="form-control"
+              placeholder="Enter your position"
+            />
+          </div>
+          <div class="form-group mb-3">
+            <input
+              type="text"
+              name=""
+              class="form-control"
+              placeholder="Enter your office"
+            />
+          </div>
+          <div class="form-group mb-3">
+            <input
+              type="number"
+              name=""
+              class="form-control"
+              placeholder="Enter your salary"
+            />
+          </div>
+          <button class="btn btn-secondary me-2">Clean</button>
+          <button class="btn btn-primary">Save</button>
+        </form>
       </div>
     </div>
   </div>
   <div class="col-md-8">
-    <table class="table table-stripped">
+    <table class="table table-striped">
       <thead>
         <tr>
           <th>Name</th>
-          <th>position</th>
-          <th>office</th>
-          <th>operations</th>
+          <th>Position</th>
+          <th>Office</th>
+          <th>Salary</th>
+          <th>Operations</th>
         </tr>
       </thead>
-      <tbody></tbody>
+      <tbody>
+        <tr *ngFor="let employee of employeeService.employees">
+          <td>{{ employee.name }}</td>
+          <td>{{ employee.position }}</td>
+          <td>{{ employee.office }}</td>
+          <td>{{ employee.salary.toLocaleString() }}€</td>
+          <td>
+            <button class="btn btn-secondary btn-sm">
+              <i class="material-icons">edit</i>
+            </button>
+            <button class="btn btn-danger btn-sm ms-2">
+              <i class="material-icons">delete</i>
+            </button>
+          </td>
+        </tr>
+      </tbody>
     </table>
   </div>
 </div>
