--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -5,6 +5,11 @@
         <form #employeeForm="ngForm" (ngSubmit)="addEmployee(employeeForm)">
           <div class="form-group mb-3">
             <input
+              type="hidden"
+              name="_id"
+              [(ngModel)]="employeeService.selectedEmployee._id"
+            />
+            <input
               type="text"
               name="name"
               class="form-control"
@@ -39,7 +44,12 @@
               [(ngModel)]="employeeService.selectedEmployee.salary"
             />
           </div>
-          <button class="btn btn-secondary me-2">Clean</button>
+          <button
+            class="btn btn-secondary me-2"
+            (click)="resetForm(employeeForm)"
+          >
+            Clean
+          </button>
           <button class="btn btn-primary">Save</button>
         </form>
       </div>
@@ -63,7 +73,10 @@
           <td>{{ employee.office }}</td>
           <td>{{ employee.salary.toLocaleString() }}€</td>
           <td>
-            <button class="btn btn-secondary btn-sm">
+            <button
+              class="btn btn-secondary btn-sm"
+              (click)="updateEmployee(employee)"
+            >
               <i class="material-icons">edit</i>
             </button>
             <button
